force-app/main/default/objects/Contact/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <inlineHelpText>Number of Active Certifications</inlineHelpText>
    <label>Certifications</label>
    <summaryFilterItems>
        <field>TrailblazerCertification__c.Status__c</field>
        <operation>equals</operation>
        <value>ACTIVE</value>
    </summaryFilterItems>
    <summaryForeignKey>TrailblazerCertification__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>