force-app/main/default/objects/Contact/fields/TrailblazerId__c.field-meta.xml
<CustomField>
    <fullName>TrailblazerId__c</fullName>
    <label>Trailblazer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>